Changelog
=========

1.0 (unreleased)
----------------

- Improve ajaxforms
  [simahawk]

- Improve add story quick form
  [simahawk]

- Add order_number field on project and catalog index
  [gborelli]

- Added load content profile. This step allow to import sample data
  [gborelli]

- Improve TimeWidget and use it for story form to fix #1
  [simahawk]

- Depend on plone.autoform >= 1.4
  [simahawk]

- added change iteration action to iteration view
  [miziodel]

- added booking action to iteration view
  [miziodel]

- Ajaxified add story form
  [simahawk]

- Add story form hidden by default
  [simahawk]

- Add close icon to actions tooltips
  [simahawk]

- Added IUserStoriesListing adapter to listing stories by user
  [giorgio]

- Removed IMyStoriesListing adapter
  [giorgio]

- added "Simplemanagement: Manage project" permission to
  Manager, PM and Site Administrator
  [giorgio]

- fix Dexterity2.0 relations issue
  [giorgio]

- added workflow to discussion item
  [giorgio]

- added plone.formwidget.contenttree dependency
  [giorgio]

- UI improvements
  [giorgio]

- disabled form releated kss
  [giorgio]

- added customer, employee, PM roles and groups
  [giorgio]

- updated translations
  [giorgio]

- added my tickets view in dasboard
  [gborelli]

- added project dashboard view
  [gborelli]

- added IMyStoriesLIsting adapter
  [gborelli]

- changed dashboard view
  [gborelli]

- added IStoryListing adapter for INavigationRoot
  [gborelli]

- moved to collective namespace
  [simahawk]

- prevent project view to brake if project created by zope admin
  [simahawk]

- users' dashboard enhancements
  [gborelli]

- added server side method to sort stories in iteration view
  [gborelli]

- Change story status from iteration view fixes #9
  [gborelli]

- checked permission to add booking, story etc
  [gborelli]

- added reopen transition on story wf - from done status to todo
  [gborelli]

- added markdown support to story and epic
  [gborelli]
